# fontysbot

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml
description/: gazebo_control.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro
description/meshes/: base_link.stl  front_left_1.stl  front_right_1.stl  lidar_link_1.stl  rear_left_1.stl  rear_right_1.stl
launch/: bringup_launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_sync_launch.py  rplidar_launch.py  rsp.launch.py  startup.launch.py
scripts/: tfbroadcaster.py
worlds/: map  test.world
